[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "xvideos-py"
version = "0.1.9"
description = "A powerful Python library to scrape xvideos.com"
authors = ["OSintt <akumagamer123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  
requests = "^2.32.3"  
beautifulsoup4 = "^4.12.3"
playwright = "^1.45.0"  

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.extras]
dev = ["pytest"]

[tool.poetry.scripts]
xvideos = 'xvideos.main:main'
